--- a/views/store-menu.ejs
+++ b/views/store-menu.ejs
@@ -1,7 +1,7 @@
 <%- include('includes/header') %>
 
 <body>
-    <h1>My restaurant page</h1>
+    <h1>My store page</h1>
 
     <% if(!member) { %>
     
