--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,16 +21,16 @@ body {
 }
 
 .layout {
-  background-image: url(https://source.unsplash.com/rf5R1qXwlDU/1600x900);
+  background-image: url(https://www.bridgwatervethospital.ca/wp-content/uploads/sites/208/2022/01/shutterstock_1947860113-2-1920x700.jpeg);
   background-position: 0 0;
-  background-size: cover;
+  background-size: 100% 100%;
   height: 100vh;
   overflow: hidden;
   position: relative;
 }
 
 .layout.nav--active main {
-  opacity: .2;
+  opacity: .7;
   user-select: none;
 }
 
@@ -40,12 +40,12 @@ body {
   content: '';
   display: block;
   height: 100%;
-  left: 0;
+  left: -155px;
   position: fixed;
-  transform-origin: 0% 50%;
-  width: 100%;
+  width: 250px;
   z-index: 0;
 }
+
 
 .layout__backdrop {
   transform: scaleX(.34) translateX(calc(67% * 3));
@@ -151,7 +151,7 @@ body {
 .nav--header-1 {
   counter-reset: n;
   height: 100%;
-  padding: 0 2rem;
+  padding: 310px 1rem;
   position: relative;
 }
 
