fix login page publish

--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/css/login.css" />
 
 <body>
-  <form class="login_container">
+  <form class="login_container" action="/store/login" method="POST">
     <div class="login_frame">
       <span class="login">Login</span>
       <div class="login_input_1">
