--- a/views/store-menu.ejs
+++ b/views/store-menu.ejs
@@ -1,17 +1,71 @@
 <%- include('includes/header') %>
 
-<body>
-    <h1>My store page</h1>
+<link rel="stylesheet" type="text/css" href="/css/menu.css">
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 
-    <% if(!member) { %>
-    
-    <h2>siz authenticated emassiz</h2>
-    <% } else { %>
-    
-    <h1>Siz authenticated bolgansiz va sizning nickingiz <%= member.mb_nick%>
-        <p>Sizning telefon raqamingiz <%= member.mb_phone%></p>
-    </h1>
-    <% } %>
+<body>
+    <div id="main_container">
+
+        <div class="group_name">
+            <ul class="nav justify-content-center">
+                <li class="nav-item" style="cursor: pointer">
+                  <a class="nav-link active" href="/store">Home</a>
+                </li>
+                <li class="nav-item" style="cursor: pointer">
+                    <a class="nav-link" href="/store/products/menu">My Store</a>
+                </li>
+                <li class="nav-item" style="cursor: pointer">
+                    <a class="nav-link" href="/store/logout">Logout</a>
+                </li>
+            </ul>    
+        </div>
+
+        <div class="restaurant_menu_frame">
+            <div class="restaurant_container">
+                <div class="dishs_table">
+                    <span class="new_dish_txt">
+                        <%= member.mb_nick.toUpperCase()%>'s Product Menu
+                    </span>
+                    <table class="table table-bordered table-hover" style="font-size: 22px;">
+                        <thead class="thead-light">
+                            <th scope="col">N.</th>
+                            <th scope="col">Product name</th>
+                            <th scope="col">Product type</th>
+                            <th scope="col">Product color</th>
+                            <th scope="col">Product price</th>
+                            <th scope="col">Product left count</th>
+                            <th scope="col">Product status</th>
+                        </thead>
+                        <% store_data.map((value, key) => { %>
+                            <tbody style="background: white; font-size: 22px;">
+                                <td><%= key + 1 %></td>
+                                <td><%= value.product_name %></td>
+                                <td><%= value.product_collection %></td>
+                                <td>
+                                    <%= value.product_color %>
+                                </td>
+                                <td><%= value.product_price %></td>
+                                <td><%= value.product_left_cnt %></td>
+                                <td>
+                                    <select class="spec_select" id="<%= value._id %>">
+                                        <option value="PAUSED" <%= value.product_status === 'PAUSED' ? 'selected' : '' %> > PAUSED</option>
+                                        <option value="PROCESS" <%= value.product_status === 'PROCESS' ? 'selected' : '' %> > PROCESS</option>
+                                    </select>
+                                </td>
+                            </tbody>
+                        <% }); %>
+                    </table>
+                </div>
+
+                <form onsubmit="return validateForm()" action="/store/products/create" method="POST"
+                 class="dish_container" enctype="multipart/form-data">
+                 <div class="long_input" style="align-items: flex-end; margin-bottom: 25px;">
+                   <span class="new_dish_txt">New product</span>
+                 </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 
 <%- include('includes/footer') %>
