--- a/views/store-menu.ejs
+++ b/views/store-menu.ejs
@@ -30,24 +30,22 @@
                         <thead class="thead-light">
                             <th scope="col">N.</th>
                             <th scope="col">Product name</th>
+                            <th scope="col">Product for</th>
                             <th scope="col">Product type</th>
-                            <th scope="col">Product color</th>
                             <th scope="col">Product price</th>
-                            <th scope="col">Product left count</th>
                             <th scope="col">Product status</th>
                         </thead>
                         <% store_data.map((value, key) => { %>
                             <tbody style="background: white; font-size: 22px;">
                                 <td><%= key + 1 %></td>
                                 <td><%= value.product_name %></td>
-                                <td><%= value.product_collection %></td>
+                                <td><%= value.product_related %></td>
                                 <td>
-                                    <%= value.product_color %>
+                                    <%= value.product_collection%>
                                 </td>
                                 <td><%= value.product_price %></td>
-                                <td><%= value.product_left_cnt %></td>
                                 <td>
-                                    <select class="spec_select" id="<%= value._id %>">
+                                    <select class="spec_select new_product_status" id="<%= value._id %>">
                                         <option value="PAUSED" <%= value.product_status === 'PAUSED' ? 'selected' : '' %> > PAUSED</option>
                                         <option value="PROCESS" <%= value.product_status === 'PROCESS' ? 'selected' : '' %> > PROCESS</option>
                                     </select>
@@ -55,17 +53,200 @@
                             </tbody>
                         <% }); %>
                     </table>
+
+                      <div class="long_input" style="align-items: flex-end; margin-bottom: 25px;">
+                       <button class="btn btn-primary hiding_btn">Add new product</button>
+                    </div>
                 </div>
 
                 <form onsubmit="return validateForm()" action="/store/products/create" method="POST"
                  class="dish_container" enctype="multipart/form-data">
-                 <div class="long_input" style="align-items: flex-end; margin-bottom: 25px;">
+                 <div class="long_input" style="align-items: center">
                    <span class="new_dish_txt">New product</span>
                  </div>
+
+                  <div>
+                     <div class="long_input">
+                          <label>Product name</label>
+                          <input type="text" placeholder="Product name" name="product_name" class="product_name">
+                     </div>
+                     <input name="product_status" value="PROCESS" class="product_status" hidden>
+                  </div>
+
+                  <div class="half_input_frame">
+                      <div class="half_input">
+                         <label>Product price</label>
+                         <input type="number" placeholder="Product price" name="product_price" class="product_price">
+                      </div>
+                      <div class="half_input">
+                              <label>Product for...</label>
+                           <select class="product_collection" name="product_related">
+                              <option value="dogs" selected>Dogs</option>
+                              <option value="cats">Cats</option>
+                              <option value="fishes">Fishes</option>
+                              <option value="birds">Birds</option>
+                          </select>
+                      </div>
+                  </div>
+                  <div class="half_input_frame">
+                      <div class="half_input">
+                            <label>Product type</label>
+                          <select class="product_collection" name="product_collection">
+                              <option value="house" selected>House</option>
+                              <option value="toys">Toys</option>
+                              <option value="food">Food</option>
+                              <option value="etc">Etc</option>
+                          </select>
+                      </div>
+
+                      <div class="half_input" id="product_size">
+                          <label>Size</label>
+                          <select class="product_size" name="product_size">
+                            <option value="small">Small</option>
+                            <option value="normal" selected>Normal</option>
+                            <option value="large">Large</option>
+                          </select>
+                      </div>
+
+                      <div class="half_input" id="product_volume" style="display: none;">
+                          <label>Food size</label>
+                          <select class="product_volume" name="product_volume">
+                            <option value="1" selected>1 kg</option>
+                            <option value="1.5">1.5 kg</option>
+                            <option value="2">2 kg</option>
+                            <option value="5">5 kg</option>
+                            <option value="10">10 kg</option>
+                          </select>
+                      </div>
+                  </div>
+
+                  <div class="long_input">
+                      <label>About product</label>
+                      <textarea name="product_description" class="product_description"></textarea>
+                  </div>
+
+                  <div class="img_frame">
+                      <label>Picture of products</label>
+                      <div class="media-frame">
+                          <div class="upload_img_box">
+                              <img src="/etc/signup1.jpg" class="1" id="image_section_1">
+                              <input type="file" id="file" name="product_images" class="image_one"
+                              onchange="previewFileHandler(this, 1)">
+                          </div>
+                          <div class="upload_img_box">
+                            <img src="/etc/signup1.jpg" class="2" id="image_section_2">
+                            <input type="file" id="file" name="product_images" class="image_two"
+                            onchange="previewFileHandler(this, 2)">
+                          </div>
+                          <div class="upload_img_box">
+                            <img src="/etc/signup1.jpg" class="3" id="image_section_3">
+                            <input type="file" id="file" name="product_images" class="image_three"
+                            onchange="previewFileHandler(this, 3)">
+                          </div><div class="upload_img_box">
+                              <img src="/etc/signup1.jpg" class="4" id="image_section_4">
+                              <input type="file" id="file" name="product_images" class="image_four"
+                              onchange="previewFileHandler(this, 4)">
+                          </div>
+                          <div class="upload_img_box">
+                              <img src="/etc/signup1.jpg" class="5" id="image_section_5">
+                              <input type="file" id="file" name="product_images" class="image_five"
+                              onchange="previewFileHandler(this, 5)">
+                          </div>
+                          <input value="<%= member._id%>" name="store_id" class="restaurant_id" hidden>
+                      </div>
+                  </div>
+                  <div class="long_input" style="align-items: flex-end; margin-bottom: 25px;">
+                     <button type="submit" class="btn btn-primary" id="create_product">Click</button>
+                  </div>
                 </form>
             </div>
         </div>
     </div>
+
+     <script>
+        $(function() {
+
+         $(document).ready(function() {
+    $(".product_collection").on("change", function() {
+        const selected_value = $(this).val(); // Use $(this) to refer to the changed dropdown
+        if (selected_value === 'food') {
+            $("#product_volume").show();
+            $("#product_size").hide();
+        } else {
+            $("#product_volume").hide();
+            $("#product_size").show();
+        }
+    });
+});
+
+           $(".hiding_btn").on("click", () => {
+                $(".dish_container").slideToggle(500);
+                $(".hiding_btn").css("displey", "none");
+            });
+            
+
+            //product status changer
+            $(".new_product_status").on("change", async function(e) {
+                const id = e.target.id;
+                const product_status = $(`#${id}.new_product_status`).val();
+                
+                try {
+                    const response = await axios.post(
+                        `/store/products/edit/${id}`,
+                        {id: id, product_status: product_status}
+                    );
+                    const result = response.data;
+                    console.log("result", result);
+
+                    if(result.state === 'success') {
+                        alert('success');
+                        location.reload();
+                    } else {
+                        alert(result.message);
+                    }
+                    
+                } catch(err) {
+                    console.log('updateChosenProduct err:', err);
+                }
+            })
+
+        });
+
+        function validateForm() {
+            const store_mb_id = $(".store_mb_id").val(),
+              product_name = $(".product_name").val(),
+              product_price = $(".product_price").val(),
+              product_collection = $(".product_collection").val(),
+              product_description = $(".product_description").val(),
+              product_status = $(".product_status").val();
+
+              if(store_mb_id == '' || product_name == '' || product_price == '' ||
+              product_collection == '' || product_status == '') {
+                alert(`Please, insert all information!`);
+                return false;
+              } else return true;
+        }
+
+        function previewFileHandler(input, order) {
+
+            const image_class_name = input.className;
+            const file = $(`.${image_class_name}`).get(0).files[0],
+              fileType = file['type'],
+              validImageTypes = ['image/jpg', 'image/jpeg', 'image/png'];
+
+              if (!validImageTypes.includes(fileType)) {
+                alert("Please, upload image in allowed format: jpg, jpeg, png");
+              } else {
+                if (file) {
+                    let reader = new FileReader();
+                    reader.onload = function() {
+                        $(`#image_section_${order}`).attr("src", reader.result);
+                    }
+                    reader.readAsDataURL(file);
+                }
+              }
+        }
+    </script>
 </body>
 
 <%- include('includes/footer') %>
